updated project for maven usage